.provarCaches/00D6C0000000xA6UAI/objects/TempTerritory__c.object
<CustomObject>
    <fields>
        <fullName>FolderName__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShapeLayerName__c</fullName>
        <label>Shape Layer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Temp Territory</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>